prevent scrollbar from shifting page (webkit only)

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -14,6 +14,7 @@ body {
   min-height: 100%;
   opacity: 0;
   transition: opacity 0.4s;
+  overflow-y: overlay;
 }
 
 @media screen and (orientation: portrait) {
